# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  ast.py  cli.py  diff.py  formatters.py  nodetypes.py  parsers.py  renderers.py
gendiff/formatters/: __init__.py  formatter.py  json.py  plain.py  text.py
tests/: ast_build_test.py  diff_test.py  gendiff_test.py  parsers_test.py
tests/fixtures/: before.yaml  expected_json.json
