[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Gendiff - hexlet second project"
authors = ["Alexander Bukharin <alexawm182@gmail.com>"]
packages = [
    { include = "gendiff" },
]
repository = "https://github.com/alexofechoes/python-project-lvl2"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.cli:main"
